// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ws reducer connection 1`] = `
Object {
  "connection": true,
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "timestamp": 0,
  },
  "userOrders": Array [],
}
`;

exports[`ws reducer default 1`] = `
Object {
  "connection": false,
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "timestamp": 0,
  },
  "userOrders": Array [],
}
`;

exports[`ws reducer userOrder 1`] = `
Object {
  "connection": false,
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "timestamp": 0,
  },
  "userOrders": Array [],
}
`;
